--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://prasannanivas.github.io/1upmedia-agent/",
+  "homepage": "https://prasannanivas.github.io/1upmedia-agent",
   "name": "aiagent",
   "version": "0.1.0",
   "private": true,
