--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-markdown": "^9.0.3",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.9.0",
     "react-toastify": "^11.0.3"
   },
   "scripts": {
