--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "cra-template": "1.2.0",
     "crypto": "^1.0.1",
     "framer-motion": "^12.0.6",
+    "js-beautify": "^1.15.3",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-icons": "^5.4.0",
     "react-markdown": "^9.0.3",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.9.0",
