--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "js-beautify": "^1.15.3",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
