--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/styled": "^11.14.0",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "crypto": "^1.0.1",
-    "framer-motion": "^12.0.6",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.4.7",
     "js-beautify": "^1.15.3",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dnd": "^16.0.1",
