--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^3.8.1",
+    "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.4.7",
+    "html-to-text": "^9.0.5",
     "js-beautify": "^1.15.3",
     "lucide-react": "^0.474.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-calendar": "^5.1.0",
@@ -20,15 +24,14 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^9.0.3",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.9.0",
     "react-slick": "^0.30.3",
-    "react-toastify": "^11.0.3",
-    "slick-carousel": "^1.8.1"
+    "react-toastify": "^11.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
