--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.9",
     "cra-template": "1.2.0",
     "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
