--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@chakra-ui/react": "^3.8.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/lab": "^7.0.0-beta.11",
+    "@mui/material": "^7.0.2",
     "axios": "^1.7.9",
     "chart.js": "^4.4.9",
     "cra-template": "1.2.0",
